# asbr_description

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: controllers.yaml  gripper_controller.yaml  initial_positions.yaml  ur_controllers.yaml
launch/: asbr_real_ur5_launch.py  control_launch.py  debug_launch.py  display.launch.py  display_asbr_ur5e.launch.xml  gripper_launch.py  ur5e_robotiq.launch.py  view_ur5e.launch.py
models/artag/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
models/artag/meshes/: artag.dae
rviz/: gripper.rviz  ur5e.rviz
src/: initial_joint_state_publisher.cpp
urdf/: arm.urdf.xacro  asbr.urdf  asbr.urdf.xacro  camera.xacro  gazebo.xacro  gripper.urdf.xacro
worlds/: empty.sdf
