<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asbr_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="oafolay2@jh.edu">Seyi R. Afolayan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robotiq_description</depend>
  <depend>ur_description</depend>
  <depend>ur_robot_driver</depend>
  <depend>realsense2_description</depend>
  <depend>xacro</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros_ign</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
